--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ body {
     height: 60px;
 }
 
+.logo:hover {
+    animation-name: moveInRight 1s ease-out;
+}/*quando passar pela logo*/
+
 .text-box {
     position: absolute;
     top: 40%;
@@ -57,6 +61,8 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    
+    backface-visibility: hidden; /*corrige o pulinho que acontece quando a animação termina */
 }
 
 .heading-primary-main {
@@ -65,6 +71,16 @@ body {
     font-weight:  400;
     letter-spacing: 35px;
     text-align: center;
+    
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    
+    /*
+        animation-timing-function: define como a animação vai processeguir, exemplo, quão rápido ou devagar
+        animation-delay: 3s;
+        animation-iteration-count: 3;  repetir animação(3 vezes)
+    */
 }
 
 .heading-primary-sub {
@@ -73,4 +89,44 @@ body {
     font-weight: 700;
     letter-spacing: 14px;
     text-align: center;
+    
+    animation-name: moveInRight 1s ease-out; /*simplificando o que foi feito acima*/
+}
+
+@keyframes  moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px) /* positivo = direita, negativo = esquerda*/
+        
+    } /*comecando a animação*/
+    
+    /*60% {
+        transform: rotate(180deg); 
+    }*/girando
+    
+    80% {
+        transform: translateX(10px);
+    }/*quando queremos que algo aconteça no meio da animação*/
+
+    100% {
+        opacity: 1;
+        transform: translate(0); /*zero, pq para parecer exatemente como é sem animação*/;
+    } /*terminando a animação*/
+}
+
+@keyframes  moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px); /* positivo = direita, negativo = esquerda*/
+        
+    }
+    
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    } 
 }
