--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%); /*Para considerar 50% da imagem*/
+    text-align: center;
 }
 
 .heading-primary {
@@ -63,6 +64,7 @@ body {
     text-transform: uppercase;
     
     backface-visibility: hidden; /*corrige o pulinho que acontece quando a animação termina */
+    margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -130,3 +132,74 @@ body {
         transform: translate(0);
     } 
 }
+
+@keyframes  moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px); /* positivo = direita, negativo = esquerda*/
+        
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    } 
+}
+
+/*:link, quando for selecionado*/
+/*:visited - estado quando o usuario já clicou no botão*/
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px; /*top bottom right left*/
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s; /*todas as propriedades estão habilitadas para receber animacao*/
+    position: relative;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);/*sombra para direção X, sombra para baixo,  tamanho fo borrado, cor*/
+}
+
+/*botão clicando*/
+.btn:active {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    transform; traslateY(-1px);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
+}
+
+.btn:after {
+    content: "";
+    dispay: inline-block;
+    height: 100%;
+    width: 100%;
+    boder-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1; /*Define a posição dos elementos*/
+    transition: all .4s;
+}
+
+.btn-white:after {
+    background-color: #fff;
+
+}
+
+.btn:hover:: {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBotton .5s ease-out .75s;
+    animation-fill-mode: backwards;
+}
+
