--- a/css/style.css
+++ b/css/style.css
@@ -177,10 +177,10 @@ body {
 
 .btn:after {
     content: "";
-    dispay: inline-block;
+    display: inline-block;
     height: 100%;
     width: 100%;
-    boder-radius: 100px;
+    border-radius: 100px;
     position: absolute;
     top: 0;
     left: 0;
