--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ body {
 /*botão clicando*/
 .btn:active {
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-    transform; traslateY(-1px);
+    transform; translateY(-1px);
 }
 
 .btn-white {
@@ -175,7 +175,7 @@ body {
     color: #777;
 }
 
-.btn:after {
+.btn::after {
     content: "";
     display: inline-block;
     height: 100%;
@@ -188,18 +188,18 @@ body {
     transition: all .4s;
 }
 
-.btn-white:after {
+.btn-white::after {
     background-color: #fff;
 
 }
 
-.btn:hover:: {
+.btn:hover::after {
     transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
+	opacity: 0;
 }
 
 .btn-animated {
-    animation: moveInBotton .5s ease-out .75s;
+    animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
 }
 
