--- a/sass-comencando.scss
+++ b/sass-comencando.scss
@@ -18,10 +18,16 @@ $width-button: 150px;
   } //corrigindo parte do backgroud que sumiu, colapso
 }
 
+@mixin style-link-text($color) {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: $color;
+}
+
 nav {
   margin: 30px;
   background-color: $color-primary;
-  @include clearfix;
+  @include clearfix
 }
 
 .navigation {
@@ -37,9 +43,7 @@ nav {
     }//primeiro elemento li .navigation li:first-child
     
     a:link {
-      text-decoration: none;
-      text-transform: uppercase;
-      color: $color-text-dark;
+      @include style-link-text($color-text-dark);
     }//.navigation li a
   } 
 }
@@ -54,10 +58,8 @@ nav {
   display: inline-block;
   text-align: center;
   border-radius: 100px;
-  text-decoration: none;
-  text-transform: uppercase;
   width: $width-button;
-  color: $color-text-light;
+  @include style-link-text($color-text-light);
 }
 
 .btn-main {
