--- a/sass-comencando.scss
+++ b/sass-comencando.scss
@@ -24,8 +24,12 @@ $width-button: 150px;
   color: $color;
 }
 
+@function divide($a, $b) {
+  @return $a / $b;
+}
+
 nav {
-  margin: 30px;
+  margin: divide(6, 2) * 1px;
   background-color: $color-primary;
   @include clearfix
 }
