--- a/sass-comencando.scss
+++ b/sass-comencando.scss
@@ -56,8 +56,7 @@ nav {
   float: right;
 }
 
-.btn-main:link,
-.btn-hot:link {
+%btn-placeholder {
   padding: 10px;
   display: inline-block;
   text-align: center;
@@ -68,6 +67,7 @@ nav {
 
 .btn-main {
   &:link {
+    @extend %btn-placeholder;
     background-color: $color-secondary;
   }
   
@@ -77,6 +77,7 @@ nav {
 }
 .btn-hot {
   &:link {
+    @extend %btn-placeholder;
     background-color: $color-tertiary;
   }
   
