--- a/sass/main.scss
+++ b/sass/main.scss
@@ -166,7 +166,7 @@ body {
 /*botão clicando*/
 .btn:active {
     box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-    transform; translateY(-1px);
+    transform: translateY(-1px);
 }
 
 .btn-white {
