--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,7 +26,8 @@ body {
     background-image: 
         linear-gradient( /* linear gradient criar um degrade de cor, sendo o 1º paramentro para onde a cor ira mudar, o 2º e 3º sendo as cores*/
             to right bottom,
-            #e23e578f, #5225469c /*Não esquecer de diminuir a opacidade da cor para aparecer a imagem de baixo*/
+            rgba($color-primary, 0.8), 
+            rgba($color-secundary, 0.8) /*Não esquecer de diminuir a opacidade da cor para aparecer a imagem de baixo*/
         ),
         url("../img/hero.jpg"); 
     background-size: cover;
@@ -61,6 +62,7 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    
     backface-visibility: hidden; /*corrige o pulinho que acontece quando a animação termina */
     margin-bottom: 60px;
 }
@@ -102,7 +104,7 @@ body {
     
     /*60% {
         transform: rotate(180deg); 
-    } girando*/
+    }girando*/
     
     80% {
         transform: translateX(10px);
