--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
   animation-duration: 1s;
   animation-timing-function: ease-out;
   /*
-        animation-timing-function: define como a animação vai processeguir, exemplo, quão rápido ou devagar
+        animation-timing-function: define como a animação vai prosseguir, exemplo, quão rápido ou devagar
         animation-delay: 3s;
         animation-iteration-count: 3;  repetir animação(3 vezes)
     */ }
