--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,12 @@
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
+@import "base/animations";
+@import "base/base";
+@import "base/typograph";
+@import "base/utilities";
+@import "pages/home";
+
 $color-primary: #e23e57; //pink
 $color-secundary-light: #88304e; //medium purple
 $color-secundary: #522546; //purple
