--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,1 +1,8 @@
+$color-primary: #e23e57; //pink
+$color-secundary-light: #88304e; //medium purple
+$color-secundary: #522546; //purple
+$color-secundary-dark: #311d3f; //dark-purple
 
+$color-grey-dark: #777;
+$color-white: #fff;
+$color-black: #000;
