--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,1 +1,16 @@
+*,
+*::after,
+*.before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7; /* Significa que a altura da linha é 1.7 x normal*/
+  color: $color-grey-dark;
+  padding: 30px;
+}
