--- a/sass/base/_typograph.scss
+++ b/sass/base/_typograph.scss
@@ -1,3 +1,12 @@
+body {
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.7; /* Significa que a altura da linha é 1.7 x normal*/
+    color: $color-grey-dark;
+    padding: 30px;
+}
+
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
