--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+//colors
 $color-primary: #e23e57; //pink
 $color-secundary-light: #88304e; //medium purple
 $color-secundary: #522546; //purple
@@ -6,3 +7,8 @@ $color-secundary-dark: #311d3f; //dark-purple
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+//grid
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
