--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $color-secundary-light: #88304e; //medium purple
 $color-secundary: #522546; //purple
 $color-secundary-dark: #311d3f; //dark-purple
 
+$color-grey-light-1: #f7f7f7;
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
