--- a/sass/base/_typograph.scss
+++ b/sass/base/_typograph.scss
@@ -42,3 +42,9 @@ body {
         animation-name: moveInRight 1s ease-out; /*simplificando o que foi feito acima*/
     }
 }
+
+.heading-secundary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+}
