--- a/sass/base/_typograph.scss
+++ b/sass/base/_typograph.scss
@@ -47,4 +47,8 @@ body {
     font-size: 3.5rem;
     text-transform: uppercase;
     font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary, $color-secundary);
+    -webkit-background-clip: text;
+    color: transparent;
 }
