--- a/sass/base/_typograph.scss
+++ b/sass/base/_typograph.scss
@@ -51,4 +51,11 @@ body {
     background-image: linear-gradient(to right, $color-primary, $color-secundary);
     -webkit-background-clip: text;
     color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s;
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    }
 }
