--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -57,3 +57,28 @@
     }
 
 }
+
+.btn-text {
+    &:link,
+    &:visited {
+        font-size: $default-font-size;
+        color: $color-secundary-light;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-secundary-light;
+        padding: 3px;
+        transition: all .2s;
+    }
+
+    &:hover {
+        background-color: $color-secundary-light;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, .15);
+        transform: translateX(-2px);
+    }
+
+    &::active {
+        box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+        transform: translateX(0);
+    }
+}
