--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,9 @@
 @import "pages/home";
 
 @import "components/button";
+@import "components/composition";
+@import "components/feature_box";
+
 
 @import "layout/header";
 @import "layout/grid";
