--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,22 @@
     padding: 25rem 0;
     margin-top: -20vh;
 }
+
+.section-feature {
+    padding: 20rem 0;
+    background-image: 
+        linear-gradient( /* linear gradient criar um degrade de cor, sendo o 1º paramentro para onde a cor ira mudar, o 2º e 3º sendo as cores*/
+            to right bottom,
+            rgba($color-primary, 0.8), 
+            rgba($color-secundary, 0.8) /*Não esquecer de diminuir a opacidade da cor para aparecer a imagem de baixo*/
+        ),
+        url("../../img/mat3.jpg"); 
+    background-size: cover;
+    transform: skewY(-7deg);
+    margin-top: -10rem;
+
+    //todos os filhos diretos
+    & > * {
+       transform: skewY(7deg);
+    }
+}
