--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,12 @@ $color-secundary-light: #88304e; //medium purple
 $color-secundary: #522546; //purple
 $color-secundary-dark: #311d3f; //dark-purple
 
+$color-card-light: #34A6C6;
+$color-card-dark: #38207B;
+
+$color-card-light-2: #4B835E;
+$color-card-dark-2: #24516B;
+
 $color-grey-light-1: #f7f7f7;
 $color-grey-dark: #777;
 $color-white: #fff;
