--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,13 +1,12 @@
 .card {
 
+    //functionality
     perspective: 150rem;
     -moz-perspective: 150rem;
     position: relative;
     height: 50rem;
 
     &__side {
-        color: #fff;
-        font-size: 2rem;
 
         height: 50rem;
         transition: all .8s ease;
@@ -17,6 +16,7 @@
         width: 100%;
         backface-visibility: hidden;
         border-radius: 3px;
+        overflow: hidden;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
         &__front {
@@ -40,5 +40,39 @@
 
     &:hover &__side__back {
         transform: rotateY(0deg);
+    }
+
+    //front side styling
+    &__picture {
+        
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: screen;
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+        &__1 {
+            background-image: linear-gradient(to right bottom, $color-card-light, $color-card-dark ), url(../../img/mat1.jpeg);
+        }
+     
+        &__2 {
+            background-image: url(../../img/mat2.jpeg);
+        }
+
+        &__2 {
+            background-image: url(../../img/mat3.jpg);
+        }
+
+    }
+
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: right;
+        color: $color-white;
+        position: absolute;
+        top: 12rem;
+        right: 2rem;
     }
 }
