--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,78 +1,185 @@
 .card {
+  //functionality
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 52rem;
 
-    //functionality
-    perspective: 150rem;
-    -moz-perspective: 150rem;
-    position: relative;
-    height: 50rem;
+  &__side {
+    height: 52rem;
+    transition: all 0.8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
-    &__side {
-
-        height: 50rem;
-        transition: all .8s ease;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        backface-visibility: hidden;
-        border-radius: 3px;
-        overflow: hidden;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-
-        &__front {
-            background-color: $color-white;
-        }
-
-        &__back {
-            transform: rotateY(180deg);
-
-            &_1 {
-                background-image: linear-gradient(to right bottom, $color-card-light, $color-card-dark );
-            }
-        }
-
-    }
-    
-
-    &:hover &__side__front {
-        transform: rotateY(180deg);
+    &__front {
+      background-color: $color-white;
     }
 
-    &:hover &__side__back {
-        transform: rotateY(0deg);
+    &__back {
+      transform: rotateY(180deg);
+
+      &_1 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-card-light,
+          $color-card-dark
+        );
+      }
+
+      &_2 {
+        background-image: linear-gradient(
+          to right bottom,
+          rgba($color-primary, 0.85),
+          rgba($color-secundary, 0.85)
+        );
+      }
+  
+      &_3 {
+        background-image: linear-gradient(
+          to right bottom,
+          rgba($color-card-light-2, 0.85),
+          rgba($color-card-dark-2, 0.85)
+        );
+      }
+    }
+  }
+
+  &:hover &__side__front {
+    transform: rotateY(180deg);
+  }
+
+  &:hover &__side__back {
+    transform: rotateY(0deg);
+  }
+
+  //front side styling
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+
+    &__1 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-card-light,
+          $color-card-dark
+        ),
+        url(../../img/mat1.jpeg);
     }
 
-    //front side styling
-    &__picture {
-        
-        background-size: cover;
-        height: 23rem;
-        background-blend-mode: screen;
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-
-        &__1 {
-            background-image: linear-gradient(to right bottom, $color-card-light, $color-card-dark ), url(../../img/mat1.jpeg);
-        }
-     
-        &__2 {
-            background-image: url(../../img/mat2.jpeg);
-        }
-
-        &__2 {
-            background-image: url(../../img/mat3.jpg);
-        }
-
+    &__2 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-primary,
+          $color-secundary
+        ),
+        url(../../img/mat2.jpeg);
     }
 
-    &__heading {
-        font-size: 2.8rem;
-        font-weight: 300;
-        text-transform: uppercase;
-        text-align: right;
-        color: $color-white;
-        position: absolute;
-        top: 12rem;
-        right: 2rem;
+    &__3 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-card-light-2,
+          $color-card-dark-2
+        ),
+        url(../../img/mat3.jpg);
     }
+  }
+
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%;
+  }
+
+  &__heading__span {
+    padding: 1rem 1.5rem;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+
+    &__1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-card-light, 0.85),
+        rgba($color-card-dark, 0.85)
+      );
+    }
+
+    &__2 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary, 0.85),
+        rgba($color-secundary, 0.85)
+      );
+    }
+
+    &__3 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-card-light-2, 0.85),
+        rgba($color-card-dark-2, 0.85)
+      );
+    }
+  }
+
+  &__details {
+    padding: 3rem;
+
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto;
+
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $color-grey-light-2;
+        }
+      }
+    }
+  }
+  //Back side styling
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
+  }
+
+  &__price_box {
+    text-align: center;
+    color: $color-white;
+    margin-bottom: 8rem;
+  }
+
+  &__price_only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+
+  &__price_value {
+    font-size: 6rem;
+    font-weight: 100;
+  }
 }
