--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -38,6 +38,16 @@
         }
     }
 
+    &--pink {
+        background-color: $color-primary;
+        color: $color-white;
+        
+        &::after {
+            background-color: $color-primary;
+    
+        }
+    }
+
     &::after {
         content: "";
         display: inline-block;
