--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,8 @@ $color-card-light-2: #4B835E;
 $color-card-dark-2: #24516B;
 
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
 $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
