--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/composition";
 @import "components/feature_box";
 @import "components/cards";
+@import "components/story";
 
 @import "layout/header";
 @import "layout/grid";
