--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,16 +1,35 @@
 *,
 *::after,
 *.before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 html {
   //this defines what 1rem is
-  font-size: 62.5%;
+  font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
+
+  //tem que estar nessa ordem para que se caso for menor se aplicar a outro, usar o de menor valor como base
+  //exemplo: 700px fica com o tab-port
+  @include response(tab-land) { //width > 1200 ? 
+    font-size: 56.25%; //1 rem = 9px, 9/16 = 56.25%
+  }
+
+  @include response(tab-port) { //width < 900 ?
+    font-size: 50%; //1 rem = 8px, 8/16 = 50%
+  }
+
+  @include response(big-desktop) {
+    font-size: 75%; //1 rem = 12px, 12/16 = 75%
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include response(tab-port) {
+    padding: 0;
+  }
 }
