--- a/sass/base/_typograph.scss
+++ b/sass/base/_typograph.scss
@@ -1,75 +1,90 @@
 body {
-    font-family: "Lato", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.7; /* Significa que a altura da linha é 1.7 x normal*/
-    color: $color-grey-dark;
-    padding: 30px;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7; /* Significa que a altura da linha é 1.7 x normal*/
+  color: $color-grey-dark;
 }
 
 .heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    
-    backface-visibility: hidden; /*corrige o pulinho que acontece quando a animação termina */
-    margin-bottom: 60px;
+  color: $color-white;
+  text-transform: uppercase;
 
-    &--main {
-        display: block;
-        font-size: 68px;
-        font-weight:  400;
-        letter-spacing: 35px;
-        text-align: center;
-        
-        animation-name: moveInLeft;
-        animation-duration: 1s;
-        animation-timing-function: ease-out;
-        
-        /*
+  backface-visibility: hidden; /*corrige o pulinho que acontece quando a animação termina */
+  margin-bottom: 60px;
+
+  &--main {
+    display: block;
+    font-size: 68px;
+    font-weight: 400;
+    letter-spacing: 35px;
+    text-align: center;
+
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
+
+    /*
             animation-timing-function: define como a animação vai processeguir, exemplo, quão rápido ou devagar
             animation-delay: 3s;
             animation-iteration-count: 3;  repetir animação(3 vezes)
         */
+  }
+
+  &--sub {
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 14px;
+    text-align: center;
+
+    animation: moveInRight 1s ease-out; /*simplificando o que foi feito acima*/
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
     }
-    
-    &--sub {
-        display: block;
-        font-size: 20px;
-        font-weight: 700;
-        letter-spacing: 14px;
-        text-align: center;
-        
-        animation-name: moveInRight 1s ease-out; /*simplificando o que foi feito acima*/
-    }
+  }
 }
 
 .heading-secundary {
-    font-size: 3.5rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    display: inline-block;
-    background-image: linear-gradient(to right, $color-primary, $color-secundary);
-    -webkit-background-clip: text;
-    color: transparent;
-    letter-spacing: .2rem;
-    transition: all .2s;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, $color-primary, $color-secundary);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 0.2rem;
+  transition: all 0.2s;
 
-    &:hover {
-        transform: skewY(2deg) skewX(15deg);
-        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
-    }
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
 
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
 }
 .heading-tertiary {
-    font-size: $default-font-size;
-    font-weight: 700;
-    text-transform: uppercase;
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .paragraph {
-    font-size: $default-font-size;
+  font-size: $default-font-size;
 
-    &:not(:last-child) {
-        margin-bottom: 3rem;
-    }
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
 }
