--- a/sass/base/_typograph.scss
+++ b/sass/base/_typograph.scss
@@ -1,6 +1,6 @@
 body {
   font-family: "Lato", sans-serif;
-  font-size: 16px;
+  // font-size: 16px;
   font-weight: 400;
   line-height: 1.7; /* Significa que a altura da linha é 1.7 x normal*/
   color: $color-grey-dark;
@@ -11,13 +11,13 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden; /*corrige o pulinho que acontece quando a animação termina */
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 
   &--main {
     display: block;
-    font-size: 68px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     text-align: center;
 
     animation-name: moveInLeft;
@@ -26,7 +26,7 @@ body {
 
     @include respond(phone) {
       letter-spacing: 1rem;
-      font-size: 5rem;
+      font-family: 5rem;
     }
 
     /*
@@ -38,15 +38,14 @@ body {
 
   &--sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 14px;
-    text-align: center;
+    letter-spacing: 1.75rem;
 
     animation: moveInRight 1s ease-out; /*simplificando o que foi feito acima*/
 
     @include respond(phone) {
-      letter-spacing: 0.5rem;
+      letter-spacing: .5rem;
     }
   }
 }
@@ -59,8 +58,8 @@ body {
   background-image: linear-gradient(to right, $color-primary, $color-secundary);
   -webkit-background-clip: text;
   color: transparent;
-  letter-spacing: 0.2rem;
-  transition: all 0.2s;
+  letter-spacing: .2rem;
+  transition: all .2s;
 
   @include respond(tab-port) {
     font-size: 3rem;
@@ -71,8 +70,8 @@ body {
   }
 
   &:hover {
-    transform: skewY(2deg) skewX(15deg);
-    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
   }
 }
 .heading-tertiary {
