--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,15 +12,15 @@ html {
 
   //tem que estar nessa ordem para que se caso for menor se aplicar a outro, usar o de menor valor como base
   //exemplo: 700px fica com o tab-port
-  @include response(tab-land) { //width > 1200 ? 
+  @include respond(tab-land) { //width > 1200 ? 
     font-size: 56.25%; //1 rem = 9px, 9/16 = 56.25%
   }
 
-  @include response(tab-port) { //width < 900 ?
+  @include respond(tab-port) { //width < 900 ?
     font-size: 50%; //1 rem = 8px, 8/16 = 50%
   }
 
-  @include response(big-desktop) {
+  @include respond(big-desktop) {
     font-size: 75%; //1 rem = 12px, 12/16 = 75%
   }
 }
@@ -29,7 +29,12 @@ body {
   box-sizing: border-box;
   padding: 3rem;
 
-  @include response(tab-port) {
+  @include respond(tab-port) {
     padding: 0;
   }
+}
+
+::selection {
+  background-color: $color-primary;
+  color: $color-white;
 }
