--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,5 +1,4 @@
 .navigation {
-
     &__checkbox {
         display: none;
     }
@@ -16,6 +15,16 @@
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
         text-align: center;
         cursor: pointer;
+
+        @include respond(tab-port) {
+            top: 4rem;
+            right: 4rem;
+        }
+
+        @include respond(phone) {
+            top: 3rem;
+            right: 3rem;
+        }
     }
 
     &__background {
@@ -25,9 +34,19 @@
         position: fixed;
         top: 6.5rem;
         right: 6.5rem;
-        background-image:  radial-gradient($color-primary, $color-secundary);
+        background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: 1000;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+
+        @include respond(tab-port) {
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+
+        @include respond(phone) {
+            top: 3.5rem;
+            right: 3.5rem;
+        }
     }
 
     &__nav {
@@ -36,7 +55,7 @@
         top: 0;
         left: 0;
         z-index: 1500;
-        
+
         opacity: 0;
         width: 0;
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -46,7 +65,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%,-50%);
         list-style: none;
         text-align: center;
         width: 100%;
@@ -67,25 +86,25 @@
             text-decoration: none;
             text-transform: uppercase;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
-            background-size: 230%;
+            background-size: 220%;
             transition: all .4s;
 
             span {
-                margin-right: 1rem;
+                margin-right: 1.5rem;
                 display: inline-block;
             }
         }
-            
+        
         &:hover,
         &:active {
             background-position: 100%;
             color: $color-primary;
             transform: translateX(1rem);
         }
-
     }
-    
-    //funcionality
+
+
+    //FUNCTIONALITY
     &__checkbox:checked ~ &__background {
         transform: scale(80);
     }
@@ -95,7 +114,8 @@
         width: 100%;
     }
 
-    //icon
+
+    //ICON
     &__icon {
         position: relative;
         margin-top: 3.5rem;
@@ -115,17 +135,10 @@
             position: absolute;
             left: 0;
             transition: all .2s;
-
         }
 
-        &::before {
-            top: -.8rem;
-        }
-
-        &::after {
-            top: .8rem;
-        }
-
+        &::before { top: -.8rem; }
+        &::after { top: .8rem; }
     }
 
     &__button:hover &__icon::before {
