--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,19 +1,35 @@
-
-/* CABEÇALHO */
 .header {
-    height: 95vh; /*Significa que a altura deve ser 95% que a janela de visualização*/
-    background-image: 
-        linear-gradient( /* linear gradient criar um degrade de cor, sendo o 1º paramentro para onde a cor ira mudar, o 2º e 3º sendo as cores*/
-            to right bottom,
-            rgba($color-primary, 0.8), 
-            rgba($color-secundary, 0.8) /*Não esquecer de diminuir a opacidade da cor para aparecer a imagem de baixo*/
-        ),
-        url("../img/hero.jpg"); 
+    height: 85vh;
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)),
+    url(../img/hero-small.jpg);
     background-size: cover;
-    background-position: center; /*Imagem responsive*/
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);/*Cada ponto será uma ponta do formato da imagem*/
-    position: relative; /* para ser referencia para o top e left do logo-box*/
+    background-position: top;
+    position: relative;
+    
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        height: 95vh;
+    }
+
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+            only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+            only screen and (min-width: 125em) {
+        background-image: linear-gradient(
+            to right bottom,
+            rgba($color-primary-light, 0.8),
+            rgba($color-primary-dark, 0.8)),
+        url(../img/hero.jpg);
+    }
+
+    @include respond(phone) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
 
     &__logo-box {
         position: absolute;
@@ -23,18 +39,13 @@
 
     &__logo {
         height: 3.5rem;
-
-        &:hover {
-            animation-name: moveInRight 1s ease-out;
-            /*quando passar pela logo*/
-        }
     }
-
+    
     &__text-box {
         position: absolute;
         top: 40%;
         left: 50%;
-        transform: translate(-50%, -50%); /*Para considerar 50% da imagem*/
+        transform: translate(-50%, -50%);
         text-align: center;
     }
 }
