--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -1,5 +1,4 @@
 .popup {
-    
     height: 100vh;
     width: 100%;
     position: fixed;
@@ -11,28 +10,33 @@
     visibility: hidden;
     transition: all .3s;
 
-    &__content {
+    @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgba($color-black, .3);
+    }
 
+    &__content {
         @include absCenter;
+
         width: 75%;
         background-color: $color-white;
         box-shadow: 0 2rem 4rem rgba($color-black, .2);
-        border-radius: 3px;  
-        display: table; 
-
+        border-radius: 3px;
+        display: table;
         overflow: hidden;
         opacity: 0;
-        transform: translate(-50%,-50%) scale(.25);
+        transform: translate(-50%, -50%) scale(.25);
         transition: all .5s .2s;
     }
 
     &__left {
-        width: 33.3333333%;
+        width: 33.333333%;
         display: table-cell;
     }
 
     &__right {
-        width: 66.66666667%;
+        width: 66.6666667%;
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
@@ -61,7 +65,7 @@
         hyphens: auto;
     }
 
-    //open states
+    //Open states
     &:target {
         opacity: 1;
         visibility: visible;
@@ -73,7 +77,6 @@
     }
 
     &__close {
-        
         &:link,
         &:visited {
             color: $color-grey-dark;
@@ -83,11 +86,12 @@
             font-size: 3rem;
             text-decoration: none;
             display: inline-block;
+            transition: all .2s;
             line-height: 1;
         }
 
         &:hover {
-           color: $color-primary; 
+            color: $color-primary;
         }
     }
 }
