--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,38 +1,36 @@
 @mixin clearfix {
-  &::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+    &::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 }
 
 @mixin absCenter {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-//MEDIA QUERY MANAGER
 
+// MEDIA QUERY MANAGER
 /*
-    0 - 600px:  Phone
-    600 - 900px: Table portrait
-    900 - 1200px: Table landscape
-    
-    [1200 - 1800px ] is where our normal styles apply
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+[1200 - 1800] is where our normal styles apply
+1800px + :      Big desktop
 
-    1800px + : Big desktop
+$breakpoint arguement choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
 
-  $breakpoint argument choices:
-    - phone
-    - tab-port
-    - tab-land
-    - big-desktop
+ORDER: Base + typography > general layout + grid > page layout > components
 
-    ORDER: Base + typography > general layout + grid > page layout > components
-
-    1em = 16px
+1em = 16px
 */
 @mixin respond($breakpoint) {
     @if $breakpoint == phone {
@@ -48,3 +46,4 @@
         @media only screen and (min-width: 112.5em) { @content };    //1800
     }
 }
+
